--- a/css/about.css
+++ b/css/about.css
@@ -164,7 +164,7 @@ a:hover .link h3 {
 }
 
 .social-link-wrapper {
-    height: 35%;
+    height: 40%;
     width: 100%;
     padding: 10px 20px;
     font-family: "regular";
@@ -271,6 +271,9 @@ nav {
 .about-content-wrapper .small-heading {
     font-size: 18px;
     font-family: "semibold";
+    background: linear-gradient(to right, #F2F2F2, #6C6C6C);
+    background-clip: text;
+    color: transparent;
 }
 
 .about-content-wrapper p {
@@ -414,7 +417,7 @@ footer p {
     }
 
     .career-point .career-img {
-        height: 40px;
+        height: 50px;
         width: 50px;
         border-radius: 6px;
         object-fit: cover;
