--- a/css/readcv.css
+++ b/css/readcv.css
@@ -164,7 +164,7 @@ a:hover .link h3 {
 }
 
 .social-link-wrapper {
-    height: 35%;
+    height: 40%;
     width: 100%;
     padding: 10px 20px;
     font-family: "regular";
@@ -255,19 +255,19 @@ nav {
 
 .container {
     max-width: 700px;
-    background: #161616;
+    /* background: #161616; */
     margin: 0px auto 0px;
-    box-shadow: 1px 1px 2px #38E492;
+    /* box-shadow: 1px 1px 2px #38E492; */
     border-radius: 3px;
-    padding: 40px;
-    margin-top: 50px;
+    padding: 4vw 4vw;
+    margin-top: 80px;
 }
 
 .header {
     margin-bottom: 30px;
 
     .full-name {
-        font-size: 40px;
+        font-size: 30px;
         text-transform: uppercase;
         margin-bottom: 5px;
         background: linear-gradient(to right, #F2F2F2, #6C6C6C);
