--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ a:hover .link h3 {
 }
 
 .social-link-wrapper {
-    height: 35%;
+    height: 40%;
     width: 100%;
     padding: 10px 20px;
     font-family: "regular";
@@ -267,7 +267,7 @@ nav {
 .description p {
     width: 90%;
     font-size: 14px;
-    padding: 3vw 4vw;
+    padding: 4vw 4vw;
     color: #7e7e7e;
 }
 
@@ -384,7 +384,7 @@ p {
     }
 
     .auto-type {
-        margin-top: 50px;
+        margin-top: 80px;
         width: 100%;
     }
 
@@ -399,7 +399,7 @@ p {
 
     .project-main {
         width: 100%;
-        height: 125vh;
+        height: 115vh;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -523,6 +523,10 @@ p {
     .skill-main {
         width: 100%;
         min-height: 65vh;
+    }
+
+    .skill-wrapper {
+        height: 85%;
     }
 
     .skill-1 {
