--- a/css/contact.css
+++ b/css/contact.css
@@ -332,6 +332,35 @@ nav {
     border-radius: 6px;
 }
 
+.success-msg-wrapper {
+    width: 100%;
+    padding: 4vw 4vw;
+    display: none;
+}
+
+.success-msg {
+    width: 100%;
+    height: 100px;
+    border-radius: 10px;
+    padding: 0vw 4vw;
+    background-color: #2B2B2B;
+    margin-top: 4vw;
+    border: 0.5px solid rgba(148, 148, 148, 0.527);
+}
+
+.success-msg p {
+    font-size: 20px;
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 35px;
+}
+
+.success-msg p i {
+    margin-right: 5px;
+    color: #38E47E;
+    font-size: 22px;
+}
+
 footer {
     height: 15vh;
     width: 100%;
@@ -359,6 +388,15 @@ footer p {
     }
 
     .top-content h3 {
+        font-size: 18px;
+    }
+
+    .success-msg {
+        height: 70px;
+    }
+
+    .success-msg p {
+        margin-top: 23px;
         font-size: 18px;
     }
 
