Added Live Demo function

--- a/css/project.css
+++ b/css/project.css
@@ -339,6 +339,15 @@ p {
     margin-top: 15%;
 }
 
+.project-btn-div {
+    margin-top: 12%;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
 .project-btn {
     margin-top: 12%;
     padding: 5px 15px;
