--- a/css/about.css
+++ b/css/about.css
@@ -302,7 +302,7 @@ nav {
 
 
 .career-path-main {
-    height: 40vh;
+    height: 50vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -357,7 +357,6 @@ nav {
     flex-direction: column;
     gap: 5px;
     width: 70%;
-
 }
 
 .career-point-content .career-point-content-left p {
@@ -412,7 +411,12 @@ footer p {
         min-height: 100vh;
     }
 
+    .career-path-main {
+        height: 45vh;
+    }
+
     .career-point {
+        height: 10vh;
         gap: 10px;
     }
 
@@ -431,8 +435,16 @@ footer p {
         width: 50%;
     }
 
+    .career-point-content .career-point-content-left h4 {
+        font-size: 14px;
+    }
+
     .career-point-content .career-point-content-left p {
         display: none;
+    }
+
+    .career-point-content .career-point-content-right h4 {
+        font-size: 14px;
     }
 
     .career-point-content .career-point-content-right p {
