--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ nav {
 
 .project-main {
     width: 100%;
-    height: 150vh;
+    height: 160vh;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -310,7 +310,7 @@ nav {
 }
 
 .project-1 {
-    height: 30vh;
+    max-height: 35vh;
     width: 100%;
     border-radius: 14px;
     padding: 1vw 1vw;
@@ -366,7 +366,6 @@ p {
 }
 
 .project-btn-div {
-    margin-top: 12%;
     background-color: transparent;
     outline: none;
     border: none;
@@ -413,7 +412,7 @@ p {
 
     .project-main {
         width: 100%;
-        height: 115vh;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -421,7 +420,7 @@ p {
     }
 
     .project-1 {
-        height: 23vh;
+        height: 20vh;
         width: 100%;
         border-radius: 14px;
     }
@@ -439,8 +438,16 @@ p {
         justify-content: center;
     }
 
+    .project-content p span {
+        display: none;
+    }
+
     .project-content a {
         margin-top: 8%;
+    }
+
+    .project-btn-div {
+        margin-top: 12%;
     }
 
     .project-btn {
