fix:/UI changes

--- a/css/project.css
+++ b/css/project.css
@@ -81,7 +81,7 @@ body {
 }
 
 .close-btn i {
-    color: white;
+    color: rgb(185, 185, 185);
     font-size: 1.5rem;
 }
 
@@ -372,7 +372,7 @@ p {
     }
 
     .top-content h3 {
-        font-size: 18px;
+        font-size: 28px;
     }
 
     .auto-type {
@@ -427,7 +427,83 @@ p {
     }
 }
 
+@media (max-width: 650px) {
+    .main-right {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 
+    .auto-type {
+        margin-top: 80px;
+        width: 100%;
+    }
+
+    .auto-type h1 {
+        font-size: 28px;
+    }
+
+    .description p {
+        width: 100%;
+        font-size: 14px;
+    }
+
+    .project-main {
+        width: 100%;
+        min-height: 530vh;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 50px;
+    }
+
+    .project-1 {
+        min-height: 50vh;
+        width: 100%;
+        border-radius: 14px;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        gap: 10px;
+    }
+
+    .project-1:hover {
+        background-color: transparent;
+    }
+
+    .project-img {
+        width: 100%;
+        height: 800px;
+    }
+
+    .project-content {
+        justify-content: start;
+        align-items: start;
+        padding: 10px;
+        gap: 10px;
+    }
+
+    .project-content h4 {
+        font-size: 20px;
+    }
+
+    .project-content p span {
+        display: none;
+    }
+
+    .project-content a {
+        margin-top: 8%;
+    }
+
+    .project-btn-div {
+        margin-top: 2%;
+    }
+
+    .project-btn {
+        margin-top: -1%;
+        padding: 5px 10px;
+    }
+}
 
 
 
